--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,120 @@
-/*цвет фона #FFFFFF*/
-
-/*цвет основного текста #212121*/
-
-/*цвет контактов #757575*/
-
+/*цвет основного текста - заголовков #212121*/
+/*цвет вторичного текста - параграфов и контактов #757575*/
 /*цвет контактов в футере rgba(255, 255, 255, 0.6)*/
+/*цвет-акцент - при ховере и цвет лого #2196F3 #000000*/
+/*цвет фона основной #FFFFFF*/
+/*цвет фона вторичный #F5F4FA*/
+/*цвет фона футера #2F303A*/
+/*цвет фона секции з заголовком h1 #2F303A*/
 
-/*вторичный цвет текста и при холдере и цвет лого #2196F3* #000000/
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --acccent-color: #2196f3;
+  --primary-white-color: #ffffff;
+}
 
-/*цвет текста параграфов #757575*/
+body {
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
+}
+/* Стили для index.html */
+
+.list {
+  list-style: none;
+}
+
+/* Site nav */
+
+.logo {
+  color: var(--title-text-color);
+  text-decoration: none;
+}
+
+.part-logo {
+  color: var(--acccent-color);
+  text-decoration: none;
+}
+
+.site-nav .link {
+  color: var(--title-text-color);
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--acccent-color);
+}
+
+.site-nav .link.current {
+  color: var(--acccent-color);
+}
+
+.contacts .contact {
+  color: var(--primary-text-color);
+}
+
+.contacts .contact:hover,
+.contacts .contact:focus {
+  color: var(--acccent-color);
+}
+
+/* Hero */
+
+.hero {
+  background-color: #2f303a;
+}
+
+.hero-title {
+  color: #ffffff;
+}
+
+/* Button */
+
+.hero-button {
+  color: var(--primary-white-color);
+  background-color: var(--acccent-color);
+}
+/* color: #ffffff;
+  background-color: var(--acccent-color) */
+
+/* Section feature */
+
+.section-title {
+  color: var(--title-text-color);
+}
+
+.feature-list {
+  list-style: none;
+}
+
+.title {
+  color: var(--title-text-color);
+}
+
+.work-list {
+  list-style: none;
+}
+
+.team-list {
+  list-style: none;
+}
+
+/* Footer */
+
+.part-logo-footer {
+  color: var(--primary-white-color);
+}
+
+.address {
+  color: var(--primary-white-color);
+}
+
+.conts .cont {
+  color: var(--primary-white-color);
+}
+
+.footer {
+  background-color: #2f303a;
+}
+
+/* Стили для portfolio.html */
