--- a/css/styles.css
+++ b/css/styles.css
@@ -12,28 +12,56 @@
   --title-text-color: #212121;
   --acccent-color: #2196f3;
   --primary-white-color: #ffffff;
+  --black-color: #000000;
+  --text-footer: rgba(255, 255, 255, 0.6);
+  --secondary-bg-color: #f5f4fa;
+  --main-font: roboto, sans-serif;
+  --secondary-font: raleway, sans-serif;
 }
 
 body {
-  background-color: var(--primary-bg-color);
+  background-color: var(--primary-white-color);
   color: var(--primary-text-color);
+
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
+
 /* Стили для index.html */
 
 .list {
   list-style: none;
+  font-style: normal;
 }
 
 /* Site nav */
 
-.logo {
-  color: var(--title-text-color);
-  text-decoration: none;
+.logo-web {
+  color: var(--acccent-color);
 }
 
-.part-logo {
-  color: var(--acccent-color);
+.logo-studio-header {
+  color: var(--black-color);
+}
+
+.logo {
   text-decoration: none;
+
+  font-family: var(--secondary-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
+.site-nav .link,
+.contacts .contact {
+  text-decoration: none;
+
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link {
@@ -41,24 +69,24 @@ body {
 }
 
 .site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .link:focus,
+.contacts .contact:hover,
+.contacts .contact:focus {
   color: var(--acccent-color);
 }
 
 .site-nav .link.current {
   color: var(--acccent-color);
+  text-decoration: none;
 }
 
 .contacts .contact {
   color: var(--primary-text-color);
 }
 
-.contacts .contact:hover,
-.contacts .contact:focus {
-  color: var(--acccent-color);
-}
-
 /* Hero */
+
+/* временно с фоном для наглядности */
 
 .hero {
   background-color: #2f303a;
@@ -66,6 +94,13 @@ body {
 
 .hero-title {
   color: #ffffff;
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 /* Button */
@@ -73,48 +108,111 @@ body {
 .hero-button {
   color: var(--primary-white-color);
   background-color: var(--acccent-color);
-}
-/* color: #ffffff;
-  background-color: var(--acccent-color) */
 
-/* Section feature */
-
-.section-title {
-  color: var(--title-text-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
-.feature-list {
-  list-style: none;
-}
+/* Sections */
 
 .title {
   color: var(--title-text-color);
 }
 
-.work-list {
-  list-style: none;
+.feature-list .title {
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
-.team-list {
-  list-style: none;
+.feature-list p,
+.team-list p {
+  font-weight: 400;
+}
+.section-title {
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
+.bground {
+  background-color: var(--secondary-bg-color);
+}
+
+.team-list .title,
+.team-list p {
+  font-size: 16px;
+  line-height: 1.19;
+}
+
+.team-list .title {
+  font-weight: 500;
 }
 
 /* Footer */
 
-.part-logo-footer {
+.logo-studio-footer {
   color: var(--primary-white-color);
 }
 
 .address {
   color: var(--primary-white-color);
+  text-decoration: none;
+
+  font-weight: 400;
+  font-style: normal;
 }
 
-.conts .cont {
+.contacts-footer .contact-footer {
   color: var(--primary-white-color);
+  text-decoration: none;
+
+  font-weight: 400;
 }
 
-.footer {
+footer {
   background-color: #2f303a;
 }
 
 /* Стили для portfolio.html */
+
+.project-button {
+  color: var(--title-text-color);
+  background-color: var(--secondary-bg-color);
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+}
+
+.project-button:hover,
+.project-button:focus {
+  color: var(--primary-white-color);
+  background-color: var(--acccent-color);
+}
+
+.project-list .title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.project-list p {
+  color: var(--primary-text-color);
+
+  font-size: 16px;
+  line-height: 1.87;
+  font-weight: 400;
+}
+
+.project-list a {
+  text-decoration: none;
+}
